--- a/backend/views/user.ejs
+++ b/backend/views/user.ejs
@@ -8,7 +8,7 @@
         />
         <link
             rel="stylesheet"
-            href="/css/users.css"
+            href="/css/user.css"
         />
         <title>Egyedi felhasználó</title>
     </head>
